# sfml-team-builder

./: .gitignore  CMakeLists.txt  README.md
include/: App.hpp  GroupSolver.hpp  Student.hpp  StudentCard.hpp
src/: App.cpp  GroupSolver.cpp  StudentCard.cpp  main.cpp
